# portia_hackathon

./: .gitignore  CLAUDE.md  QWEN.md  README.md  finalised_ideas.md  ideas.md  pyproject.toml  test_detailed_portia.py  test_portia_minimal.py  test_portia_this_works.py  test_simple_portia.py
.claude-flow/metrics/: system-metrics.json
config/: .env.example  pyproject.toml
docs/: README.md  day2_implementation_summary.md  first_day_plan.md  fixes_need_to_be_done.md  implementaion_needed_day1.md  plan.md
repomix-portia/: repomix-output-portiaAI-docs.xml  repomix-output-portiaAI-portia-agent-examples.xml  repomix-output-portiaAI-portia-fastapi-example.xml  repomix-output-portiaAI-portia-fastapi-template.xml  repomix-output-portiaAI-portia-sdk-python.xml  repomix-output-portiaAI-steel_thread.xml
scripts/: run_tests.sh  setup.sh
src/: compatibility_fix.py
src/agents/: base_agent.py  claim_negotiator.py  claim_negotiator_day2_methods.py  escalation_manager.py
src/config/: __init__.py  validation_config.py
src/data/: mock_policies.json
src/demo/: architectural_validation_test.py  basic_test.py  comprehensive_day2_test_works.py  day1_mvp_demo.py  day2_complete_test.py  day2_final_working_demo.py  day2_final_working_test.py  day2_showcase_demo.py  day2_working_final.py  final_showcase_demo.py  full_pipeline_test.py  voice_test.py
src/hooks/: audit_logger.py  escalation_triggers.py
src/tools/: claim_tools.py  compliance_tools.py  policy_tools.py  precedent_tools.py  settlement_tools.py
src/utils/: __init__.py  (+4 more)
tests/: conftest.py  test_day2_implementation.py
(+6 files in other folders)
